# dyad-reducer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
src/: consts.rs  error.rs  lib.rs  main.rs  solution.rs  solvers.rs  stats.rs  test_reader.rs  text_model.rs
